# PDE_framework

./: .gitignore  README.md  analytic_sol.py  animate.py  combined_animation.py  pyproject.toml
examples/: demo.py  switching.py  try_small_n.py
pde_framework/: PDE_functional_form.py  __init__.py
tests/: test_PDE_input.py
