[tool.poetry]
name = "pde-framework"
version = "0.1.0"
description = ""
authors = ["Cgyc20 <cgyc20@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

demo = "examples.demo:main"
small_n = "examples.try_small_n:main"
switch = "examples.switching:main"
